# zathura-pdf-mupdf

./: .gitignore  AUTHORS  Doxyfile  LICENSE  Makefile  README  README.md  colors.mk  config.mk  document.c  image.c  index.c  links.c  meson.build  meson_options.txt  page.c  pdf.c  pdf.h  plugin.c  plugin.h  render.c  search.c  select.c  utils.c  utils.h  zathura-pdf-mupdf.desktop
.github/workflows/: build.yaml
data/: meson.build  org.pwmt.zathura-pdf-mupdf.desktop  org.pwmt.zathura-pdf-mupdf.metainfo.xml
doc/: Doxyfile  Makefile  conf.py  index.rst  installation.rst  requirements.txt
doc/development/: contributing.rst  index.rst
subprojects/: libzathura.wrap
tests/: Makefile  annotations.c  attachments.c  config.mk  document.c  form-fields.c  image.c  links.c  meson.build  meta.c  outline.c  page.c  render.c  search.c  select.c  tests.c  utils.c  utils.h
zathura-pdf-mupdf/: annotations.c  attachment.c  attachments.c  config.h  document.c  form-fields.c  image.c  index.c  internal.h  links.c  macros.h  meta.c  outline.c  page.c  plugin.c  plugin.h  render.c  search.c  select.c  utils.c  utils.h
