option('plugindir',
  type: 'string',
  value: '',
  description: 'Install to a different location than Zathura\'s plugin directory'
)
option('tests',
  type: 'feature',
  value: 'auto',
  description: 'run tests'
)
option('pdf',
  type: 'boolean',
  value: 'true',
  description: 'enable pdf support which bring conflict with zathura-pdf-poppler'
)
