option('plugindir',
  type: 'string',
  value: '',
  description: 'Install to a different location than Zathura\'s plugin directory'
)
option('tests',
  type: 'feature',
  value: 'auto',
  description: 'run tests'
)
option('pdf',
  type: 'feature',
  value: 'auto',
  description: 'PDF support which bring conflict with zathura-pdf-poppler'
)
